@@ -86,4 +86,4 @@ for the hpy method.
  There is currently no arguments to this constructor, I may think
 of adding some options in the future, but it has not yet been needed.
 </p></dd></dl></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Fri Jan  9 17:06:04 2009</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Fri Jun 12 13:42:39 2009</div></body></html>
