@@ -791,4 +791,4 @@ in the web browser the doc for the heap method one can do:
       <pre>
 &gt;&gt;&gt; hp.doc.heap[0]
 </pre></dd></dl></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Fri Jan  9 17:06:04 2009</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Fri Jun 12 13:42:39 2009</div></body></html>
